--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -15,6 +15,9 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap-grid.min.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/main.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/engraver.css" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,11 +27,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Engraving Viz</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <button onclick="openViz()">Open Viz</button>
+    <div id="app-root"
+         data-first-line-disabled="true"
+         data-first-line-placeholder="Edition '24"
+         data-second-line-placeholder="Ihre 16 Zeichen"
+         data-third-line-placeholder="Ihre 16 Zeichen"
+    ></div>
+    <input id="attr_engraving_data" type="hidden" value="{&quot;firstLine&quot;:&quot;test&quot;,&quot;secondLine&quot;:&quot;now&quot;}" />
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -39,5 +49,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <script>
+    function openViz() {
+      const event = new CustomEvent('showVisualizer');
+      document.dispatchEvent(event);
+    }
+  </script>
   </body>
 </html>
